--- a/main.ipynb
+++ b/main.ipynb
@@ -245,7 +245,59 @@
       "Generación 1 de 10\n",
       "Evaluando modelo 1 con hiperparámetros: (5, 16, 'sigmoid', 'binary_crossentropy', 'rmsprop', 'l2', 64)\n",
       "Accuracy del modelo 1: 0.7782\n",
-      "Evaluando modelo 2 con hiperparámetros: (3, 128, 'selu', 'binary_crossentropy', 'rmsprop', 'l1', 32)\n"
+      "Evaluando modelo 2 con hiperparámetros: (3, 128, 'selu', 'binary_crossentropy', 'rmsprop', 'l1', 32)\n",
+      "Accuracy del modelo 2: 0.7782\n",
+      "Evaluando modelo 3 con hiperparámetros: (2, 32, 'selu', 'binary_crossentropy', 'rmsprop', 'dropout', 16)\n",
+      "Accuracy del modelo 3: 0.7825\n",
+      "Evaluando modelo 4 con hiperparámetros: (4, 64, 'tanh', 'binary_crossentropy', 'adam', 'l2', 32)\n",
+      "Accuracy del modelo 4: 0.8171\n",
+      "Evaluando modelo 5 con hiperparámetros: (1, 32, 'softmax', 'binary_crossentropy', 'sgd', 'l1', 128)\n",
+      "Accuracy del modelo 5: 0.7782\n",
+      "Evaluando modelo 6 con hiperparámetros: (4, 128, 'selu', 'binary_crossentropy', 'adam', 'l2', 16)\n",
+      "Accuracy del modelo 6: 0.8132\n",
+      "Evaluando modelo 7 con hiperparámetros: (3, 64, 'elu', 'binary_crossentropy', 'adam', 'dropout', 16)\n",
+      "Accuracy del modelo 7: 0.7793\n",
+      "Evaluando modelo 8 con hiperparámetros: (1, 64, 'elu', 'binary_crossentropy', 'rmsprop', 'dropout', 16)\n",
+      "Accuracy del modelo 8: 0.7966\n",
+      "Evaluando modelo 9 con hiperparámetros: (2, 128, 'selu', 'binary_crossentropy', 'rmsprop', 'dropout', 128)\n",
+      "Accuracy del modelo 9: 0.7824\n",
+      "Evaluando modelo 10 con hiperparámetros: (5, 128, 'sigmoid', 'binary_crossentropy', 'rmsprop', 'dropout', 16)\n",
+      "Accuracy del modelo 10: 0.7782\n",
+      "Evaluando modelo 11 con hiperparámetros: (1, 128, 'elu', 'binary_crossentropy', 'adam', 'l2', 32)\n",
+      "Accuracy del modelo 11: 0.8162\n",
+      "Evaluando modelo 12 con hiperparámetros: (1, 32, 'sigmoid', 'binary_crossentropy', 'sgd', 'dropout', 128)\n",
+      "Accuracy del modelo 12: 0.7934\n",
+      "Evaluando modelo 13 con hiperparámetros: (3, 64, 'elu', 'binary_crossentropy', 'rmsprop', 'l1', 128)\n",
+      "Accuracy del modelo 13: 0.7782\n",
+      "Evaluando modelo 14 con hiperparámetros: (4, 64, 'softmax', 'binary_crossentropy', 'sgd', 'l1', 32)\n",
+      "Accuracy del modelo 14: 0.7782\n",
+      "Evaluando modelo 15 con hiperparámetros: (5, 32, 'softmax', 'binary_crossentropy', 'rmsprop', 'dropout', 128)\n",
+      "Accuracy del modelo 15: 0.7782\n",
+      "Evaluando modelo 16 con hiperparámetros: (4, 16, 'tanh', 'binary_crossentropy', 'adam', 'l1', 128)\n",
+      "Accuracy del modelo 16: 0.8193\n",
+      "Evaluando modelo 17 con hiperparámetros: (2, 32, 'selu', 'binary_crossentropy', 'rmsprop', 'dropout', 32)\n",
+      "Accuracy del modelo 17: 0.7828\n",
+      "Evaluando modelo 18 con hiperparámetros: (1, 16, 'softmax', 'binary_crossentropy', 'adam', 'dropout', 16)\n",
+      "Accuracy del modelo 18: 0.7930\n",
+      "Evaluando modelo 19 con hiperparámetros: (1, 128, 'relu', 'binary_crossentropy', 'rmsprop', 'l2', 32)\n",
+      "Accuracy del modelo 19: 0.8182\n",
+      "Evaluando modelo 20 con hiperparámetros: (2, 64, 'tanh', 'binary_crossentropy', 'rmsprop', 'l1', 64)\n",
+      "Accuracy del modelo 20: 0.8190\n",
+      "Top 1 solución: (4, 16, 'tanh', 'binary_crossentropy', 'adam', 'l1', 128) con accuracy: 0.8193\n",
+      "Top 2 solución: (2, 64, 'tanh', 'binary_crossentropy', 'rmsprop', 'l1', 64) con accuracy: 0.8190\n",
+      "Top 3 solución: (1, 128, 'relu', 'binary_crossentropy', 'rmsprop', 'l2', 32) con accuracy: 0.8182\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\jorge\\OneDrive\\Documentos\\GitHub\\DL-Laboratorio-4\\main.ipynb Cell 7\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jorge/OneDrive/Documentos/GitHub/DL-Laboratorio-4/main.ipynb#W5sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m         child1 \u001b[39m=\u001b[39m mutate(child1)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jorge/OneDrive/Documentos/GitHub/DL-Laboratorio-4/main.ipynb#W5sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m     \u001b[39mif\u001b[39;00m random\u001b[39m.\u001b[39mrandom() \u001b[39m<\u001b[39m \u001b[39m0.1\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/jorge/OneDrive/Documentos/GitHub/DL-Laboratorio-4/main.ipynb#W5sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m         child2 \u001b[39m=\u001b[39m mutate(child2)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jorge/OneDrive/Documentos/GitHub/DL-Laboratorio-4/main.ipynb#W5sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m     new_population\u001b[39m.\u001b[39mextend([child1, child2])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jorge/OneDrive/Documentos/GitHub/DL-Laboratorio-4/main.ipynb#W5sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m \u001b[39m# Actualizar la población para la siguiente generación\u001b[39;00m\n",
+      "\u001b[1;32mc:\\Users\\jorge\\OneDrive\\Documentos\\GitHub\\DL-Laboratorio-4\\main.ipynb Cell 7\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jorge/OneDrive/Documentos/GitHub/DL-Laboratorio-4/main.ipynb#W5sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m     solution[mutation_point] \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mchoice([\u001b[39m'\u001b[39m\u001b[39msgd\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39madam\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrmsprop\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jorge/OneDrive/Documentos/GitHub/DL-Laboratorio-4/main.ipynb#W5sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m \u001b[39melif\u001b[39;00m mutation_point \u001b[39m==\u001b[39m \u001b[39m5\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/jorge/OneDrive/Documentos/GitHub/DL-Laboratorio-4/main.ipynb#W5sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m     solution[mutation_point] \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mchoice([\u001b[39m'\u001b[39m\u001b[39mdropout\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39ml1\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39ml2\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jorge/OneDrive/Documentos/GitHub/DL-Laboratorio-4/main.ipynb#W5sZmlsZQ%3D%3D?line=58'>59</a>\u001b[0m \u001b[39melif\u001b[39;00m mutation_point \u001b[39m==\u001b[39m \u001b[39m6\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/jorge/OneDrive/Documentos/GitHub/DL-Laboratorio-4/main.ipynb#W5sZmlsZQ%3D%3D?line=59'>60</a>\u001b[0m     solution[mutation_point] \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39mchoice([\u001b[39m16\u001b[39m, \u001b[39m32\u001b[39m, \u001b[39m64\u001b[39m, \u001b[39m128\u001b[39m])\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
    ],
